--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,4 @@
+/* Sets the root attributes for the CSS file */
 :root {
   --primary: #3bf7f7;
   --secondary: #adeedc;
@@ -8,11 +9,11 @@
   --city-button-background: #76809c;
   --city-button-text: #022d2d;
 }
-
+/* Makes the box sizing border box */
 * {
   box-sizing: border-box;
 }
-
+/* Sets the attributes for the whole body */
 body {
   background-color: var(--primary);
   margin: 0;
@@ -22,7 +23,7 @@ body {
   line-height: 1.5;
   font-size: 16px;
 }
-
+/* Sets all of the 'h' tags' attributes */
 h1,
 h2,
 h3,
@@ -34,12 +35,12 @@ h6 {
   color: var(--dark);
   line-height: 1.25;
 }
-
+/* Sets the attributes for main html */
 main {
   margin: 20px auto;
   width: 94%;
 }
-
+/* Sets the attributes for the search box's button */
 .btn {
   font-size: 1.3rem;
   text-decoration: none;
@@ -55,7 +56,7 @@ main {
   box-shadow: 3px 3px var(--dark);
   transform: translate(-1px, -1px);
 }
-
+/* Sets the hover affects for search box's button */
 .btn:hover {
   color: var(--dark);
   background-color: var(--tertiary);
@@ -63,13 +64,38 @@ main {
   box-shadow: 2px 2px var(--dark);
   cursor: pointer;
 }
-
+/* Styling for the saved city named buttons */
+.cityButton {
+  font-size: 1.3rem;
+  text-decoration: none;
+  padding: 6px 5px;
+  width: 75%;
+  display: block;
+  margin: 5px 0;
+  margin-left: 5px;
+  border-radius: var(--border-radius);
+  color: var(--city-button-text);
+  border: none;
+  outline: none;
+  background-color: var(--city-button-background);
+  box-shadow: 3px 3px var(--city-button-text);
+  /* transform: translate(-1px, -1px); */
+}
+/* Sets the hover affects for the saved city named buttons */
+.cityButton:hover {
+  color: var(--dark);
+  background-color: var(--tertiary);
+  transform: translate(0, 0);
+  box-shadow: 2px 2px var(--dark);
+  cursor: pointer;
+}
+/* Sets the main header's attributes */
 .hero {
   padding: 3% 4%;
   background-color: var(--dark);
   color: var(--primary);
 }
-
+/* Creates a shadow effect for the header in hero */
 .app-title {
   font-size: 2rem;
   background-color: var(--primary);
@@ -94,17 +120,17 @@ main {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  margin-top: 20px; /* Adjust as needed */
+  margin-top: 20px;
 }
 
 /* Styling for individual forecast cards */
 .forecast-card {
-  width: 200px; /* Adjust card width as needed */
+  width: 200px; 
   padding: 10px;
   margin: 10px;
-  border: 1px solid #ccc; /* Optional: Add border */
+  border: 1px solid #ccc; 
 }
-
+/* Styling for Today's forecast card */
 .today{
   margin: 10px;
   border: 3px solid var(--dark);
@@ -119,13 +145,8 @@ main {
   align-items: center;
   text-align: center; /* Center-align text */
 }
-.today h2 {
-  margin-bottom: 10px; /* Add some space below the header */
-}
 
-.today p {
-  margin-bottom: 5px; /* Add some space below each paragraph */
-}
+/* Styling for 5-Day Forecast cards */
 .forecast-card{
 
   margin: 10px;
@@ -138,19 +159,19 @@ main {
   display: inline;
 
 }
-
+/* Styling for the form card */
 .card-form {
   margin: 10px;
   border: 3px solid var(--dark);
   border-radius: var(--border-radius);
 }
-
+/* Styling for the form card's header */
 .card-header {
   color: var(--primary);
   background-color: var(--dark);
   padding: 2.5%;
 }
-
+/* Styling for the form card's body */
 .card-body {
   padding: 2.5%;
 }
@@ -201,9 +222,7 @@ main {
   flex-direction: column;
   flex-wrap: wrap;
 }
-
-
-
+/* Flex adjustments using the grid system */
 .col-auto {
   flex-grow: 1;
 }
@@ -216,30 +235,8 @@ main {
   flex: 0 0 100%;
 }
 
-.cityButton {
-  font-size: 1.3rem;
-  text-decoration: none;
-  padding: 6px 5px;
-  width: 75%;
-  display: block;
-  margin: 5px 0;
-  margin-left: 5px;
-  border-radius: var(--border-radius);
-  color: var(--city-button-text);
-  border: none;
-  outline: none;
-  background-color: var(--city-button-background);
-  box-shadow: 3px 3px var(--city-button-text);
-  /* transform: translate(-1px, -1px); */
-}
-.cityButton:hover {
-  color: var(--dark);
-  background-color: var(--tertiary);
-  transform: translate(0, 0);
-  box-shadow: 2px 2px var(--dark);
-  cursor: pointer;
-}
 
+/* Media Screens for dynamic and user friendly application */
 /* col-sm */
 @media screen and (min-width: 640px) {
   .col-sm-4 {
